welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:3: error: not found: value c
    c = a+b
    ^sumDouble:4: error: not found: value c
    return c
           ^sumDouble:8: error: not found: value c
    c=4*a
    ^sumDouble:9: error: not found: value c
    return c
           ^sumDouble:7: error: type mismatch;
 found   : Unit
 required: Integer
  if (a == b) {
  ^