welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  if (a != b) {
    c = a+b
    return c
  }
  
  if (a == b) {
    c=4*a
    return c
  }
}
